# SALTMDB

./: .gitignore  AGENT.md  AGENT_BLIND_TEST_RUN.md  AGENT_GUIDE.md  BUG_FIX_RUN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYBRID_SEARCH_DESIGN.md  INSTALL.md  MIGRATION.md  NEW_ISSUES.md  README.md  REVIEW_1.md  example_sfb.md  pyproject.toml  saltmdb_server.py  saltmdb_viewer.py
.github/workflows/: python-tests.yml
IMP_PLANS/: SALTMDB_REVIEW.md  SALTMDB_REVIEW_2.md
examples/: query_db.py
scratch/: _lock_race_worker.py  _write_race_worker.py  backfill_embeddings.py  blind_test_arch.py  blind_test_assistant.py  blind_test_ops.py  build_review_report.py  diff.txt  handover_notes.md  import_example_data.py  inspect_repopulated_db.py  print_js.py  test_db.py  test_e2e.py  test_endpoints.py  test_hybrid_search.py  test_js_execution.js  validate_html.py  viewer_debug.js
skills/relations/: SKILL.md
skills/saltmdb_consolidation/: SKILL.md
skills/saltmdb_ingestion_and_write/: SKILL.md
skills/saltmdb_lifecycle/: SKILL.md
src/saltmdb/: __init__.py  __main__.py  config.py  ephemeral_store.py  permanent_store.py  server.py
src/saltmdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_advanced_quality_features.py  test_archived_embedding_status.py  test_consolidation_quality.py  test_e2e_hybrid_search.py  test_embedding_service.py  test_embedding_trigger.py  test_librarian_service.py  test_mcp_tools.py  test_ngram_markdown_quality.py  test_nlp_quality.py  test_redaction.py  test_search_scores.py  test_viewer_routes.py
(+26 files in other folders)
