[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saltmdb"
version = "0.1.0-alpha.33"
description = "Local-First MCP Memory Server"
readme = "README.md"
authors = [
    { name = "Bálint Zoltán Márton" }
]
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "sqlite-vec>=0.1.0",
    "fastembed>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/zbalint/SALTMDB"

[project.scripts]
saltmdb-server = "saltmdb.__main__:main"
saltmdb-viewer = "saltmdb.viewer.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]
